--- a/templates/auth/change_password.html
+++ b/templates/auth/change_password.html
@@ -12,7 +12,7 @@
       {% for field in form %}
         {% include "form_snippet.html" %}
       {% endfor %}
-      <p><button type="submit" class="button">Valider</button></p>
+      <p><button type="submit" class="check">Valider</button></p>
     </form>
   </div>
 {% endblock %}
