--- a/templates/order/_order_detail.html
+++ b/templates/order/_order_detail.html
@@ -1,13 +1,14 @@
 {% load filters %}
 <ul>
   <li>Commande créée le {{ order.date_created|date }}</li>
+  <li>Commande créée par {{ order.team.name }} - {{ order.get_full_name }}</li>
   {% if order.data_delivered %}
     <li>Commande livrée le {{ order.date_delivered|date }}</li>
   {% else %}
     <li>Statut: {{ order.get_status_display }}</li>
   {% endif %}
   
-  {% if user|is_secretary %}
+  {% if order.status > 1 and user|is_secretary %}
     <li>Budget à imputer:
       <a href="{% url order_budget order.id %}" class="pencil setBudget">
         {{ order.budget }}
@@ -64,11 +65,24 @@
 
 <p><strong>PRIX TOTAL COMMANDE: {{ order.price }} €</strong></p>
 
+
 {% if user|is_secretary %}
-  <div style="float:right">
-    <button class="plus addDebit">Frais annexes</button>
-    <button class="minus addCredit">Remises</button>
-  </div>
+  {% if order.status > 1 %}
+    <div style="float:right">
+      <button class="plus addDebit">Frais annexes</button>
+      <button class="minus addCredit">Remises</button>
+    </div>
+  {% endif %}
+  
+  <a href="{% url set_next_status order.id %}" class="next-status {{ order|dialogClass|default:"" }}">
+    {% if order.status == 2 and order.budget.budget_type == 1 %}
+      Transmettre pour envoi
+    {% else %}{% if order.status == 2 or order.status == 3 %}  
+      Envoi au fournisseur
+    {% else %}{% if order.status == 4 %}
+      Commande réceptionnée
+    {% endif %}{% endif %}{% endif %}
+  </a>
 {% endif %}
 
 <div class="cleaner"></div>
