--- a/templates/provider/index.html
+++ b/templates/provider/index.html
@@ -55,9 +55,7 @@
                 <a href="{% url provider_item provider.id %}" class="pencil button">Editer</a>
               {% endif %}
               {% if user in provider.users_in_charge.all or user|is_admin %}
-                <a href="{% url product_new %}?provider_id={{provider.id}}" class="plus button">
-                  Ajouter&nbsp;un&nbsp;produit
-                </a>
+                <a href="{% url product_new %}?provider_id={{provider.id}}" class="plus">Ajouter&nbsp;un&nbsp;produit</a>
                 <a href="{% url import_products provider.id %}" class="import noloading">Import produits</a>
                 <a href="{% url export_products provider.id %}" class="export noloading">Export produits</a>
               {% endif %}
