--- a/templates/tab_orders.html
+++ b/templates/tab_orders.html
@@ -36,7 +36,7 @@
             <td>{{ order.date_created|date }}</td>
             <td>{{ order.provider.name }}</td>
             {% if user|is_secretary %}
-              <td>{{ order.team.name }}</td>
+              <td>{{ order.team.name }} ({{ order.get_full_name }})</td>
               <td>{{ order.budget.name }}</td>
             {% endif %}
             <td>{{ order.price }} €</td>
@@ -48,9 +48,9 @@
               {% if user|is_secretary %}
                 <a href="{% url set_next_status order.id %}" class="next-status {{ order|dialogClass|default:"" }}">
                   {% if order.status == 2 and order.budget.budget_type == 1 %}
-                    En attente d'envoi
-                  {% else %}{% if order.status == 2 or order.status == 3 %}
-                    Saisie n° commande
+                    Transmettre pour envoi
+                  {% else %}{% if order.status == 2 or order.status == 3 %}  
+                    Envoi au fournisseur
                   {% else %}{% if order.status == 4 %}
                     Commande réceptionnée
                   {% endif %}{% endif %}{% endif %}
