--- a/templates/tab_orders.html
+++ b/templates/tab_orders.html
@@ -48,9 +48,9 @@
               {% if user|is_secretary %}
                 <a href="{% url set_next_status order.id %}" class="next-status {{ order|dialogClass|default:"" }}">
                   {% if order.status == 2 and order.budget.budget_type == 1 %}
-                    Transmettre pour envoi
+                    Pour saisie SIFAC
                   {% else %}{% if order.status == 2 or order.status == 3 %}  
-                    Envoi au fournisseur
+                    Saisie n° XLAB
                   {% else %}{% if order.status == 4 %}
                     Commande réceptionnée
                   {% endif %}{% endif %}{% endif %}
