--- a/templates/auth/change_password.html
+++ b/templates/auth/change_password.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div id="content">
     <div id="content_header"><h2>Changement de mot de passe</h2></div>
-    <form action="{% url change_password change_user.id %}" method="POST" accept-charset="utf-8" class="change_password">{% csrf_token %}
+    <form action="{% url change_password user_id %}" method="POST" accept-charset="utf-8" class="change_password">{% csrf_token %}
       <p class="instructions">
         <em>Les champs marqués d'une étoile sont obligatoires</em>
       </p>
