--- a/templates/tab_orders.html
+++ b/templates/tab_orders.html
@@ -36,7 +36,7 @@
             <td>{{ order.date_created|date }}</td>
             <td>{{ order.provider.name }}</td>
             {% if user|is_secretary %}
-              <td>{{ order.team.name }} ({{ order.get_full_name }})</td>
+              <td>{{ order.get_full_name }}</td>
               <td>{{ order.budget.name }}</td>
             {% endif %}
             <td>{{ order.price }} €</td>
