--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
           <ul>
             <li>
               <a href="{% url home %}" class="{% block home %}{% endblock %}">
-                Infos
+                Accueil
               </a>
             </li>
             <li>
