--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,4 +1,4 @@
-{# PAGE EQUIPES #}
+{# PAGE ACCUEIL #}
 
 {% extends "main_custom.html" %}
 {% load filters %}
@@ -8,5 +8,41 @@
 {% block content %}
 <div id="content" style="min-height:0">
   <div id="content_header"><h2>Infos</h2></div>
+</div>
+<div id="content" style="min-height:0">
+  <div id="content_header"><h2>Bugs</h2></div>
+  <div style="float:left;width:70%;min-height:600px;border-right:1px solid #eee;">
+    <table class="list">
+      <thead>
+        <th>Titre</th>
+        <th>Description</th>
+        <th>Type</th>
+        <th>Priorité</th>
+        <th>Statut</th>
+        <th>Date</th>
+      </thead>
+      <tbody>
+        {% for issue in issues %}
+          <tr>
+            <td>{{ issue.title }}</td>
+            <td>{{ issue.description }}</td>
+            <td>{{ issue.get_issue_type_display }}</td>
+            <td>{{ issue.get_severity_display }}</td>
+            <td>{{ issue.get_status_display }}</td>
+            <td>{{ issue.date_created|date }}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  <div style="float:left;width:29%">
+    <form action="{% url issue_index %}" method="POST">{% csrf_token %}
+      {% for field in issue_form %}
+        {% include "form_snippet.html"%}
+      {% endfor %}
+      <button type="submit" class="check button">Valider</button>
+    </form>
+  </div>
+  <div class="cleaner"></div>
 </div>
 {% endblock %}
