--- a/templates/product/form.html
+++ b/templates/product/form.html
@@ -1,5 +1,6 @@
 {% extends "main_classic.html" %}
 
+{% block menu_product %}selected{% endblock %}
 {% block header %}Nouveau produit ({{provider.name}}){% endblock %}
 
 {% block content %}
