--- a/templates/tab_history.html
+++ b/templates/tab_history.html
@@ -66,7 +66,7 @@
             <td>{{ item.price }}</td>
             <td>{{ item.budget }}</td>
             <td>
-              <a href="{{ item.get_absolute_url }}" class="zoomin button">
+              <a href="{{ item.get_absolute_url }}" class="zoomin">
                 Voir détail
               </a>
             </td>
