--- a/templates/budget/form_debit.html
+++ b/templates/budget/form_debit.html
@@ -1,15 +1,27 @@
-{% extends "main_classic.html" %}
+{% extends "main_custom.html" %}
 
-{% block header %}Débit sur le budget {{ budget.name }} (équipe {{ budget.team.name}}){% endblock %}
+{% block menu_budgets %}selected{% endblock %}
+
+{% block buttons %}
+<div class="btn_wrapper">
+  <a href="{% url budgets %}" class="btn_big">
+    <img src="{{ MEDIA_URL }}img/icons/coins.png" />Retour liste des budgets
+  </a>
+</div>
+{% endblock %}
 
 {% block content %}
-<form action="{% url debit_budget budget.id %}" method="post">{% csrf_token %}
+<div id="content" style="min-height:0">
+  <div id="content_header"><h2>Débit sur le budget {{ budget.name }} (équipe {{ budget.team }})</h2></div>
+  <form action="{% url debit_budget budget.id %}" method="post">{% csrf_token %}
+    <input type="hidden" name="budget" value="{{budget.name}}" />
     <p class="instructions">
       <em>Les champs marqués d'une étoile sont obligatoires</em>
     </p>
     {% for field in form %}
         {% include "form_snippet.html"%}
     {% endfor %}
-    <button type="submit" class="check button">Valider</button>
-</form>
+    <button type="submit" class="check">Valider</button>
+  </form>
+</div>
 {% endblock %}
