--- a/templates/order/item.html
+++ b/templates/order/item.html
@@ -3,7 +3,7 @@
 
 {% block buttons %}
 <div class="btn_wrapper">
-  <a href="{% url tab_orders %}" class="btn_small">
+  <a href="{{ prev_url }}" class="btn_small">
     <img src="{{ MEDIA_URL }}img/icons/arrow_left.png" />Retour
   </a>
 </div>
