--- a/templates/tab_orders.html
+++ b/templates/tab_orders.html
@@ -44,7 +44,7 @@
             <td>{{ order.number|default:"" }}</td>
             <td>{{ order.last_change|date }}</td>
             <td>
-              <a href="{{ order.get_absolute_url }}" class="pencil">Voir détail</a>
+              <a href="{{ order.get_absolute_url }}?next={{next}}" class="pencil">Voir détail</a>
               {% if user|is_secretary %}
                 <a href="{% url set_next_status order.id %}" class="next-status {{ order|dialogClass|default:"" }}">
                   {% if order.status == 2 %}
