changed "comments" to "information"

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,7 @@
       <thead>
         <th width="60px">Date</th>
         <th width="60px">Expiration</th>
-        <th>Info</th>
+        <th>Information</th>
       </thead>
       <tbody>
         {% for info in infos %}
