--- a/templates/issues/item.html
+++ b/templates/issues/item.html
@@ -8,8 +8,28 @@
 {% if user|is_admin or user.is_superuser %}
   {% block buttons %}
   <div class="btn_wrapper">
-    <a href="{% url issue_delete issue.id %}" class="btn_medium">
+    <a href="{% url issue_delete issue.id %}" class="btn_small">
       <img src="{{ MEDIA_URL }}img/icons/cross.png" />Supprimer
+    </a>
+  </div>
+  <div class="btn_wrapper">
+    <a href="{% url issue_status issue.id 1 %}" class="btn_small">
+      <img src="{{ MEDIA_URL }}img/icons/bug_edit.png" />En cours
+    </a>
+  </div>
+  <div class="btn_wrapper">
+    <a href="{% url issue_status issue.id 2 %}" class="btn_small">
+      <img src="{{ MEDIA_URL }}img/icons/bug_link.png" />Doublon
+    </a>
+  </div>
+  <div class="btn_wrapper">
+    <a href="{% url issue_status issue.id 4 %}" class="btn_small">
+      <img src="{{ MEDIA_URL }}img/icons/bug_go.png" />Résolu
+    </a>
+  </div>
+  <div class="btn_wrapper">
+    <a href="{% url issue_status issue.id 4 %}" class="btn_medium">
+      <img src="{{ MEDIA_URL }}img/icons/bug_delete.png" />Ne sera pas résolu
     </a>
   </div>
   {% endblock %}
