--- a/templates/order/_order_detail.html
+++ b/templates/order/_order_detail.html
@@ -68,10 +68,12 @@
 </table>
 
 <p><strong>PRIX TOTAL COMMANDE: {{ order.price }} €</strong></p>
+{% if order.status < 3 or user|is_secretary %}
 <div style="float:right">
   <button class="plus addDebit">Frais annexes</button>
   <button class="minus addCredit">Remises</button>
 </div>
+{% endif %}
 <br />
 
 {% if user|is_secretary %}
