new bug table, secretary can't change budget when order number is set

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -42,9 +42,14 @@
   </div>
   <div class="cleaner"></div>
 </div>
+
+
 <div id="content" style="min-height:0">
   <div id="content_header"><h2>Bugs</h2></div>
   <div style="float:left;width:73%;min-height:600px;border-right:1px solid #eee;">
+    <br />
+    <a href="." class="notice">Non résolus</a>
+    <a href=".?fixed=True" class="flag">Résolus</a>
     <table class="list">
       <thead>
         <th>Titre</th>
