--- a/templates/order/_order_detail.html
+++ b/templates/order/_order_detail.html
@@ -8,7 +8,7 @@
     <li>Statut: {{ order.get_status_display }}</li>
   {% endif %}
   
-  {% if order.status > 1 and user|is_secretary %}
+  {% if user|is_secretary and order.status > 1 and not order.number %}
     <li>Budget à imputer:
       <a href="{% url order_budget order.id %}" class="pencil setBudget">
         {{ order.budget }}
